--- a/core/templates/page.html
+++ b/core/templates/page.html
@@ -96,19 +96,6 @@
            -webkit-opacity: 0.4;
            background: red;
        }
-       #outputHolder
-       {
-           xwidth: 600px;
-           height: 1em;
-           margin-bottom: 1em;
-           font-size: 125%;
-       }
-       #outputText
-       {
-           font-style: italic;
-           font-weight: bold;
-           margin-left: 0.5em;
-       }
     </style>
 
     <style type="text/css" media="screen">
@@ -137,89 +124,7 @@
     <script type="text/javascript" src="{% static 'js/jquery.ba-bbq.min.js' %}"></script> 
     <script type="text/javascript">
         var viewer = null;
-        var output = null;
 
-        function init() {
-            var width = {{page.jp2_width}};
-            var height = {{page.jp2_length}};
-            var tileSize = 256;
-            var tileOverlap = 1;
-            var minLevel = 10;
-            var maxLevel = Math.ceil(Math.log(Math.max(width, height)) / Math.log(2));
-
-            var ts = new OpenSeadragon.TileSource(width, height, tileSize, tileOverlap, minLevel, maxLevel);
-
-            ts.getTileUrl =  function(level, column, row) {
-                var px = 0
-                if (column!=0) {
-                    px = this.tileSize * column - this.tileOverlap;
-                }
-                var py = 0
-                if (row!=0) {
-                    py = this.tileSize * row - this.tileOverlap;
-                }
-                var scale = this.getLevelScale(level);
-                var dimensionsScaled = this.dimensions.times(scale);
-
-                // find the dimension of the tile, adjust for no
-                // overlap data on top and left edges
-                sx = this.tileSize + (column==0 ? 1 : 2) * this.tileOverlap;
-                sy = this.tileSize + (row==0 ? 1 : 2) * this.tileOverlap;
-
-                // adjust size for single-tile levels where the image
-                // size is smaller than the regular tile size, and for
-                // tiles on the bottom and right edges that would
-                // exceed the image bounds.
-                sx = Math.min(sx, dimensionsScaled.x - px)
-                sy = Math.min(sy, dimensionsScaled.y - py)
-
-                var tile_width = parseInt(sx);
-                var tile_height = parseInt(sy);
-
-                var x1 = parseInt(px / scale);
-                var y1 = parseInt(py / scale);
-                var x2 = parseInt((px + sx) / scale);
-                var y2 = parseInt((py + sy) / scale);
-
-                return '{% url chronam_page title.lccn,issue.date_issued,issue.edition,page.sequence %}' + 'image_'+tile_width+'x'+tile_height+'_from_'+x1+','+y1+'_to_'+x2+','+y2+'.jpg';
-            }
-
-            var viewer = new OpenSeadragon.Viewer({
-                id: "viewer_container",
-                toolbar: "item-ctrl",
-                prefixUrl: "{% static '' %}",
-                autoHideControls: false,
-                nextButton: "next",
-                previousButton: "previous",
-                tileSources: ts
-            });
-
-    
-            output = document.getElementById("outputText");
-            viewer.addHandler("open", addOverlays);
-            viewer.addHandler("open", onOpen);
-            viewer.addHandler("open", resizePrint);
-            viewer.addHandler("animationfinish", resizePrint);
-            viewer.addHandler("animationstart", onAnimationStart);
-            viewer.addHandler("animationfinish", onAnimationFinish);
-            viewer.addHandler("resize", fullscreen);
-
-            if ($.bbq.getState("fullscreen")) {
-                viewer.setFullPage(true);
-                rewritePagingLinks();
-            }
-
-            $("#pageNum").change(function(event) { 
-                var url = $("#pageNum").val();
-                if (viewer.isFullPage()) {
-                    url += "#fullscreen=true";
-                }
-                document.location = url;
-            });
-
-            $(window).bind("hashchange", rewritePagingLinks);
-        };
-      
         function fullscreen(viewer) {
             if (viewer.isFullPage()) { 
                 $.bbq.pushState({"fullscreen": true});
@@ -268,7 +173,7 @@
                 return new OpenSeadragon.Point(parseInt(d.width * max.y/d.height),max.y);
             }
         }
-    
+        
         function getDisplayRegion(viewer, source) {
             //Determine portion of scaled image that is being displayed
             var box = new OpenSeadragon.Rect(0, 0, source.x, source.y);
@@ -300,15 +205,15 @@
         }
 
         function addOverlay(viewer, x1, y1, x2, y2) {
-		    var img = document.createElement("img");
-		    var placement = OpenSeadragon.OverlayPlacement.BOTTOM;
+            var img = document.createElement("img");
+            var placement = OpenSeadragon.OverlayPlacement.BOTTOM;
                 
             var div = document.createElement("div");
             var rect = new OpenSeadragon.Rect(x1, y1, x2, y2);
 
             div.className = "overlay";
             viewer.drawer.addOverlay(div, rect);
-	    };
+        }
 
         function addOverlays(viewer) {
             var $ = jQuery;
@@ -330,77 +235,135 @@
                                        value[2]*scale,
                                        value[3]*scale);
                         });
-		    }
-		});
-	    });
-	}
+                    }
+                });
+            });
+        }
 
-       function show(msg) {
-           var timeString = new Date().toLocaleTimeString();
-           output.innerHTML = msg + " at " + timeString + ".";
-       }
+        function getTileUrl(level, column, row) {
+            var px = 0
+            if (column!=0) {
+                px = this.tileSize * column - this.tileOverlap;
+            }
+            var py = 0
+            if (row!=0) {
+                py = this.tileSize * row - this.tileOverlap;
+            }
+            var scale = this.getLevelScale(level);
+            var dimensionsScaled = this.dimensions.times(scale);
 
-       function onOpen(viewer) {
-           show("Image opened");
-       }
+            // find the dimension of the tile, adjust for no
+            // overlap data on top and left edges
+            sx = this.tileSize + (column==0 ? 1 : 2) * this.tileOverlap;
+            sy = this.tileSize + (row==0 ? 1 : 2) * this.tileOverlap;
 
-       function onAnimationStart(viewer) {
-           show("Animation started");
-       }
+            // adjust size for single-tile levels where the image
+            // size is smaller than the regular tile size, and for
+            // tiles on the bottom and right edges that would
+            // exceed the image bounds.
+            sx = Math.min(sx, dimensionsScaled.x - px)
+            sy = Math.min(sy, dimensionsScaled.y - py)
 
-       function onAnimationFinish(viewer) {
-           show("Animation finished");
-       }
+            var tile_width = parseInt(sx);
+            var tile_height = parseInt(sy);
 
-       //OpenSeadragon.addEvent(window, "load", init);
-       $(document).ready(init);
-    </script>
+            var x1 = parseInt(px / scale);
+            var y1 = parseInt(py / scale);
+            var x2 = parseInt((px + sx) / scale);
+            var y2 = parseInt((py + sy) / scale);
 
-  <script type="text/javascript">
-      (function() {
-          var params, search_qs;
+            return '{% url chronam_page title.lccn,issue.date_issued,issue.edition,page.sequence %}' + 'image_'+tile_width+'x'+tile_height+'_from_'+x1+','+y1+'_to_'+x2+','+y2+'.jpg';
+        }
 
-          params = $.extend($.deparam.querystring(), $.deparam.fragment());
-          search_qs = $.param(params, true);
+        function addSearchNav() {
+            var params, search_qs;
 
-          var view_type = params.view_type || 'gallery',
-          $nav_result = $(".nav_result");
+            params = $.extend($.deparam.querystring(), $.deparam.fragment());
+            search_qs = $.param(params, true);
 
-          function update_search_nav(data) {
-              if (!data) return;
+            var view_type = params.view_type || 'gallery',
+            $nav_result = $(".nav_result");
 
-              $nav_result.find("a.backtoresults").attr("href", data.results);
-              $nav_result.find(".current").text(data.current);
-              $nav_result.find(".total").text(data.total);
+            function updateSearchNav(data) {
+                if (!data) return;
 
-              if (data.next_result) {
-                  var url = data.next_result;
-                  $nav_result.find(".next")
-                  .removeClass("disabled")
-                  .find("a")
-                  .wrapInner($('<a>').attr('href', url));
-              }
+                $nav_result.find("a.backtoresults").attr("href", data.results);
+                $nav_result.find(".current").text(data.current);
+                $nav_result.find(".total").text(data.total);
 
-              if (data.previous_result) {
-                  var url = data.previous_result;
-                  $nav_result.find(".previous")
-                  .removeClass("disabled")
-                  .find("a")
-                  .wrapInner($('<a>').attr('href', url));
-              }
+                if (data.next_result) {
+                    var url = data.next_result;
+                    $nav_result.find(".next")
+                    .removeClass("disabled")
+                    .find("a")
+                    .wrapInner($('<a>').attr('href', url));
+                }
 
-              $nav_result.slideDown("fast");
-          }
+                if (data.previous_result) {
+                    var url = data.previous_result;
+                    $nav_result.find(".previous")
+                    .removeClass("disabled")
+                    .find("a")
+                    .wrapInner($('<a>').attr('href', url));
+                }
 
-          if (!search_qs || !search_qs.match(/searchType/)) return;
+                $nav_result.slideDown("fast");
+            }
 
-          $.ajax({
-              url: "{% url chronam_search_pages_navigation %}?" + search_qs,
-              dataType: "json",
-              cache: true,
-              success: update_search_nav
-          });
-      })();
+            if (!search_qs || !search_qs.match(/searchType/)) return;
+
+            $.ajax({
+                url: "{% url chronam_search_pages_navigation %}?" + search_qs,
+                dataType: "json",
+                cache: true,
+                success: updateSearchNav
+            });
+        }
+
+        function init() {
+            var width = {{page.jp2_width}};
+            var height = {{page.jp2_length}};
+            var tileSize = 256;
+            var tileOverlap = 1;
+            var minLevel = 10;
+            var maxLevel = Math.ceil(Math.log(Math.max(width, height)) / Math.log(2));
+
+            var ts = new OpenSeadragon.TileSource(width, height, tileSize, tileOverlap, minLevel, maxLevel);
+            ts.getTileUrl =  getTileUrl;
+
+            var viewer = new OpenSeadragon.Viewer({
+                id: "viewer_container",
+                toolbar: "item-ctrl",
+                prefixUrl: "{% static '' %}",
+                autoHideControls: false,
+                nextButton: "next",
+                previousButton: "previous",
+                tileSources: ts
+            });
+
+            viewer.addHandler("open", addOverlays);
+            viewer.addHandler("open", resizePrint);
+            viewer.addHandler("animationfinish", resizePrint);
+            viewer.addHandler("resize", fullscreen);
+
+            if ($.bbq.getState("fullscreen")) {
+                viewer.setFullPage(true);
+                rewritePagingLinks();
+            }
+
+            $("#pageNum").change(function(event) { 
+                var url = $("#pageNum").val();
+                if (viewer.isFullPage()) {
+                    url += "#fullscreen=true";
+                }
+                document.location = url;
+            });
+
+            $(window).bind("hashchange", rewritePagingLinks);
+            addSearchNav();
+        }
+
+        $(document).ready(init);
   </script>
 
 {% endblock %}
@@ -500,10 +463,6 @@
         </div>
       </div><!-- end id:item-ctrl -->
 
-      <div id="outputHolder" style="display: none">
-        Last event: <span id="outputText"></span>
-      </div>
-      
       {% if page.jp2_filename %}
       <div id="viewer_container"></div>
       {% else %}
