--- a/core/templates/issues.html
+++ b/core/templates/issues.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block javascript %}
+{{ block.super }}
 <script type="text/javascript">
 jQuery(function($){
     $("#id_year").change(function(){
