--- a/core/templates/search_pages_results.html
+++ b/core/templates/search_pages_results.html
@@ -3,6 +3,7 @@
 {% load custom_filters %}
 
 {% block javascript %}
+{{ block.super }}
 <script type="text/javascript" src="{% static 'js/search_results.js' %}"></script>
 <script type="text/javascript">
 
