--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -4,6 +4,7 @@
 {% load humanize %}
  
 {% block javascript %}
+{{ block.super }}
 <!-- jCarousel --> 
 <script type="text/javascript" src="{% static 'js/jquery.jcarousel.js' %}"></script> 
 
