--- a/core/templates/issue_pages.html
+++ b/core/templates/issue_pages.html
@@ -72,6 +72,7 @@
 {% endblock %}
 
 {% block javascript %}
+{{ block.super }}
 <script type="text/javascript">
 jQuery(function($) {
     $("form[name='page_number_form']").submit(function() {
