--- a/core/templates/news_directory.html
+++ b/core/templates/news_directory.html
@@ -4,6 +4,7 @@
 {% load humanize %}
 
 {% block javascript %}
+{{ block.super }}
 <script type="text/javascript">    
 (function($){
         setup_states();
