--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -6,7 +6,7 @@
 {% block javascript %}
 {{ block.super }}
 <!-- jCarousel --> 
-<script type="text/javascript" src="{% static 'js/jquery.jcarousel.js' %}"></script> 
+<script type="text/javascript" src="{% static 'js/jquery.jcarousel.min.js' %}"></script>
 
 <script type="text/javascript"> 
 $(document).ready(setupCarousel);
