--- a/core/templates/includes/lc_metadata.html
+++ b/core/templates/includes/lc_metadata.html
@@ -14,7 +14,7 @@
         {% for l in title.languages.all %}<meta name="DC.language" content="{{ l.code }}" />
         {% endfor %}
         <link title="MODS Metadata Schema" rel="schema.mods" href="http://www.loc.gov/standards/mods/mods.xsd" />
-        <meta name="mods.title" content="{{ title.name }}" />
+        <meta name="mods.title" content="{{ title.display_name }}" />
         <meta name="mods.place" content="{{ title.place_of_publication }}" />
         {% for p in title.places.all %}<meta name="mods.place" content="{{ p.name }}" />{% endfor %}
         <meta name="mods.url" content="{{ request.build_absolute_uri }}" />
