--- a/core/templates/newspaper.html
+++ b/core/templates/newspaper.html
@@ -1,7 +1,7 @@
 {% extends "site_base.html" %}
 
 {% block lc_metadata %}
-{% with title.name as title_metadata %}
+{% with title.display_name as title_metadata %}
 {% include "includes/lc_metadata.html" %}
 {% endwith %}
 {% endblock %}
@@ -9,8 +9,8 @@
 {% block extrahead %}
 <link rel="primaryTopic" href="{{ title.abstract_url }}" />
 <link rel="resourcemap" type="application/rdf+xml" href="{% url chronam_title_dot_rdf title.lccn %}" title="ORE Resource Map" />
-<link rel="alternate" type="application/marc+xml" href="{% url chronam_title_marcxml title.lccn %}" title="MARCXML Record for {{ title.name }}" />
-<link rel="alternate" type="application/atom+xml" href="{% url chronam_title_atom title.lccn %}" title="Update Feed for {{ title.name }}" />
+<link rel="alternate" type="application/marc+xml" href="{% url chronam_title_marcxml title.lccn %}" title="MARCXML Record for {{ title.display_name }}" />
+<link rel="alternate" type="application/atom+xml" href="{% url chronam_title_atom title.lccn %}" title="Update Feed for {{ title.display_name }}" />
 
 {% endblock %}
 
@@ -18,12 +18,12 @@
 {
     link: '{% url chronam_title_marcxml title.lccn %}',
     label: 'application/marc+xml',
-    meta: 'MARCXML Record for {{ title.name }}',
+    meta: 'MARCXML Record for {{ title.display_name }}',
 },
 {
     link: '{% url chronam_title_atom title.lccn %}',
     label: 'application/atom+xml',
-    meta: 'Update Feed for {{ title.name }}',
+    meta: 'Update Feed for {{ title.display_name }}',
 },
 {% endblock %}
                       
