--- a/core/templates/newspapers.html
+++ b/core/templates/newspapers.html
@@ -28,7 +28,7 @@
             {% with title.lccn as lccn %}
             <tr class="{% cycle '' 'alt' %}">
                 <td class="first"><a {% ifchanged state %}name="{{state}}" {% endifchanged %}href="{% url chronam_newspapers_state state|pack_url %}">{{state}}</a></td>
-                <td><a href="{% url chronam_title lccn %}"><strong>{{title.name}}</strong></a><br />{{title.place_of_publication}}, {{title.start_year}}-{{title.end_year}}</td>
+                <td><a href="{% url chronam_title lccn %}"><strong>{{title.display_name}}</strong></a><br />{{title.place_of_publication}}, {{title.start_year}}-{{title.end_year}}</td>
                 <td><a href="{% url chronam_issues lccn %}" shape="rect"><img src="{% static 'images/calendar_icon.gif' %}" alt="calendar"/></a></td>
                 <td>{{title.issues.count}}</td>
                 <td><a href="{% url chronam_issue_pages lccn,title.first,1 %}">{{title.first|date:'Y-m-d'}}</a></td>
