--- a/core/templates/reports/batch.html
+++ b/core/templates/reports/batch.html
@@ -89,7 +89,7 @@
       <td><a href="{% url chronam_reel reel.number %}">{{ reel.number }}</a></td>
         <td>
             {% for title in reel.titles %}
-            <a href="{% url chronam_title title.lccn %}">{{ title.name }} ({{title.lccn}})</a> 
+            <a href="{% url chronam_title title.lccn %}">{{ title.display_name }} ({{title.lccn}})</a> 
             {% endfor %}
         </td>
       <td>{{ reel.title_range }}</td>
