--- a/core/templates/reports/reel.html
+++ b/core/templates/reports/reel.html
@@ -24,7 +24,7 @@
         </td>
         <td>
             {% for title in reel.titles %}
-            <a href="{% url chronam_title title.lccn %}">{{ title.name }} ({{title.lccn}})</a> 
+            <a href="{% url chronam_title title.lccn %}">{{ title.display_name }} ({{title.lccn}})</a> 
             {% endfor %}
         </td>
 	<td>{{ reel.title_range }}</td>
