upgraded to jquery-ui 1.9.1 (and trimmed it down to the bits we're using. see previous comment in ticket for details); refs #1292

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -119,7 +119,7 @@
 
 {% block javascript %}
 {{ block.super }}
-<script src="{% static 'js/jquery-ui.min.js' %}" ></script>
+<script src="{% static 'js/jquery-ui.js' %}" ></script>
 
 <script type="text/javascript">
 jQuery(function ($) {
