--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -27,11 +27,6 @@
     {% block extrahead %}{% endblock extrahead %}
 {% endblock head_content %}
 
-{% block crumb_base %}
-    <span> &gt; </span>
-    <a href="/">Chronicling America</a>
-{% endblock crumb_base %}
-
 {% block crumb_extra %}
     <!--{% if page_title %}<span> &gt; </span>{{page_title}}{% endif %}-->
 {% endblock crumb_extra %} 
@@ -39,14 +34,8 @@
 <!-- Content -->
 {% block content %}
 <div id="main_body">
-    <div id="top_branding">
-        <div class="neh_logo"><a href="http://www.neh.gov"><img src="{% static 'images/logo_neh.png' %}" width="186" height="46" alt="National Endowment for the Humanities" /></a></div>
-        <div class="chron_logo"><a href="{% url chronam_home %}"><img src="{% static 'images/logo_chron_top.png' %}" width="179" height="31" alt="" /></a></div>
-        <div class="neh_txt">
-            <p>Search America&#39;s historic newspapers pages from {{search_form.fulltextStartYear}}-{{search_form.fulltextEndYear}} or use the U.S. Newspaper Directory to find information about American newspapers published between 1690-present. Chronicling America is sponsored jointly by the <a href="http://www.neh.gov" class="external">National Endowment for the Humanities<span> external link</span></a> and the Library of Congress. <a href="{% url chronam_about %}" class="ar-more-gray">Learn more</a></p>
-        </div><!-- end id:neh_txt -->
-    </div><!-- end id:top_branding -->
-    <div class="clear"><!-- --></div>
+  {% block top_branding %}
+  {% endblock top_branding %}
 
     {% block main_body %}
     {% block box-tabs %}
