added load static for static tag

--- a/loc/templates/site.html
+++ b/loc/templates/site.html
@@ -1,5 +1,7 @@
 {% extends "lc/base.html" %}
 
+{% load static from staticfiles %}
+
 {% block crumb_base %}
     <a href="http://www.loc.gov/">The Library of Congress</a>
     <span> &gt; </span>
