--- a/core/templates/includes/tabs.html
+++ b/core/templates/includes/tabs.html
@@ -8,10 +8,10 @@
         <li><a href="#tab_advanced_search"><span>Advanced Search</span></a></li>
         <li><a href="#tab_newspapers"><span>All Digitized Newspapers {{search_form.fulltextStartYear}}-{{search_form.fulltextEndYear}}</span></a></li>
     </ul>
-    <span class="btn_directory"><a href="{% url chronam_search_titles %}"><img src=
+    <span class="btn_directory"><a href="{% url chronam_search_titles %}">US Newspaper Directory<!--<img src=
             {% ifequal page_name 'directory' %}"{% static 'images/btn_usnews_sel.png' %}"
             {% else %}"{% static 'images/btn_usnews.png' %}"{% endifequal %}
-            width="296" height="34" border="0" alt="US Newspaper Directory, 1690-Present" /></a></span>
+            width="296" height="34" border="0" alt="US Newspaper Directory, 1690-Present" />--></a></span>
     <div id="tab_search" class="ui-tabs-hide">
         <form action="{% url chronam_search_pages_results %}" method="get" name="fulltext" id="fulltext" class="search-pages">
             <div class="wrap-tabsearch">
