--- a/core/templates/site.html
+++ b/core/templates/site.html
@@ -1,38 +1,72 @@
 <!DOCTYPE html>{% load static from staticfiles %}
-<html>
+<html lang="en">
   <head profile="http://dublincore.org/documents/2008/08/04/dc-html/">
     {% block head_content %}
+    <meta charset="utf-8">
     <title>{% if page_title %}{{page_title}} « {% endif %}{% if site_title %}{{site_title}} « {% endif %}Library of Congress</title>
-    <meta http-equiv="Content-Language" content="en-us" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <style>
+      body {
+        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+      }
+    </style>
+    <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" media="screen">
+    <link href="{% static 'bootstrap/css/bootstrap-responsive.css' %}" rel="stylesheet">
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
     {% endblock head_content %}
   </head>
   <body>
     {% block body_content %}
-    <div id="container">
+
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <a class="brand" href="/">Project name</a>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li class="active"><a href="/">Home</a></li>
+              <li><a href="/about/">About</a></li>
+              <li><a href="/help/">Help</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
     </div>
 
-    <div id="crumb_nav">
-      {% block crumb_base %}
-      <a href="/">Home</a>
-      {% endblock %}
-      {% for crumb in crumbs %}
-      <span> &gt; </span> <a href="{{crumb.href}}">{{crumb.label}}</a>
-      {% endfor %}
-      {% block crumb_extra %}
-      {% endblock %}
-    </div>
+    <div class="container"> <!-- twitter bootstrap -->
 
-    <div id="content">
-    {% block content %}
-    {% endblock content %}
-    </div>
+      <div id="container">
+      </div>
 
+      {% block breadcrumbs %}
+      <ul class="breadcrumb">
+	<li><a href="#">Home</a> <span class="divider">/</span></li>
+	{% for crumb in crumbs %}
+	<li {% if crumb.active %}class="active"{% endif %}><a href="{{crumb.href}}">{{crumb.label}}</a> <span class="divider">/</span></li>
+	{% endfor %}
+      </ul>
+      {% endblock breadcrumbs %}
+
+      <div id="content">
+	{% block content %}
+	{% endblock content %}
+      </div>
+
+    </div>
     {% endblock body_content %}
     {% block javascript %}
     <script src="{% static 'js/jquery.min.js' %}"></script>
+    <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
     {% endblock javascript %}
   </body>
 </html>
-
