more crumb cleanup; removed hard-coded crumbs

--- a/core/templates/site.html
+++ b/core/templates/site.html
@@ -49,12 +49,13 @@
       </div>
 
       {% block breadcrumbs %}
+      {% if crumbs|length > 1 %}
       <ul class="breadcrumb">
-	<li><a href="/">Home</a>{% if crumbs %}<span class="divider">/</span>{% endif %}</li>
 	{% for crumb in crumbs %}
 	<li {% if crumb.active %}class="active"{% endif %}><a href="{{crumb.href}}">{{crumb.label}}</a>{% if forloop.last %}{% else %} <span class="divider">/</span>{% endif %}</li>
 	{% endfor %}
       </ul>
+      {% endif %}
       {% endblock breadcrumbs %}
 
       <div id="content">
