--- a/core/templates/includes/results_ctrl.html
+++ b/core/templates/includes/results_ctrl.html
@@ -2,31 +2,28 @@
 
     <div class="left">
         <span class="results">Results {{ start }} - {{ end }} of {{ paginator.count }}</span>
-        <span class="pagination">
-            {% if page.has_previous %}
-            <a href="{{previous_url}}" class="prev"><img src="{% static 'images/pag_prev_on.gif' %}" alt="prev" width="13" height="13" /></a>
-            {% endif %} 
+        <div class="pagination">
+	  <ul>
+            <li><a {% if page.has_previous %}{% else %}class="disabled"{% endif %} href="{{previous_url}}" class="prev">prev</a></li>
      
             {% for page_number in page_range_short %}
-    	     {% if not forloop.first %}|{% endif %}
 
              {% ifequal page_number "..." %}
-             ...
+             <li><span>...</span></li>
              {% else %}
 
              {% ifequal page_number page.number %}
-             <span class="off">{{page_number}}</span> 
+             <li class="disabled"><span>{{page_number}}</span></li>
              {% else %}
-             <a href="?{{q}}&amp;page={{page_number}}&amp;sort={{sort}}">{{page_number}}</a> 
+             <li><a href="?{{q}}&amp;page={{page_number}}&amp;sort={{sort}}">{{page_number}}</a></li>
              {% endifequal %}
 
              {% endifequal %}
              {% endfor %}
             
-            {% if page.has_next %} 
-            <a href="{{ next_url }}" class="next"><img src="{% static 'images/pag_next_on.gif' %}" alt="next" width="13" height="13" /></a>
-            {% endif %} 
-        </span>
+            <li><a {% if page.has_next %}{% else %}class="disabled"{% endif %} href="{{ next_url }}" class="next">next</a></li>
+	  </ul>
+        </div>
         <form action="" method="GET" class="jumptopage">
             <label for="jumptopage">Jump to page:</label> 
             <input class="std" type="text" id="jumptopage" name="page" value="" size="5" />
