added inline style to not show empty nav_result

--- a/core/templates/page.html
+++ b/core/templates/page.html
@@ -375,7 +375,7 @@
 {% endblock %}
 
 {% block sharetool_container_left %}
-<div class="nav_result">
+<div class="nav_result" style="display: none">
     <a class="ar-back backtoresults" href="">Back to search results</a>
     <span class="previous disabled"><a class="ar-back" href="">Previous</a> |</span>
     <span class="current"></span> of <span class="total"></span>
