--- a/loc/templates/base.html
+++ b/loc/templates/base.html
@@ -16,6 +16,7 @@
           href="http://www.loc.gov/rss/ndnp/ndnp.xml" />
     <meta http-equiv="Content-Language" content="en-us" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link type="text/css" rel="stylesheet" href="{% static 'base.css' %}" />
     <link type="text/css" rel="stylesheet"
           href="{% static 'jquery-ui.css' %}" />
     <link type="text/css" rel="styelsheet" href="{% static 'ui_carousel.css' %}" />
