--- a/core/templates/title.html
+++ b/core/templates/title.html
@@ -13,7 +13,8 @@
 {% endblock %}
 
 {% block newspaper_content %}
-    <div id="col2_about_left">
+<div class="row">
+    <div id="col2_about_left" class="span5">
         <dl class="alt">
             <dt>Title: </dt>
             <dd>
@@ -219,46 +220,46 @@
         </dl>
     </div><!-- end id:col2_left -->
 
-    <div id="col2_about_right">
+    <div class="span1"></div>
+
+    <div id="col2_about_right" class="span6">
         {% if title.has_issues %}
-        <div class="about_issue_right">
-          <div class="info">
-            <h3>{{title.display_name}}&nbsp;{{issue_date|date:"F j, Y"}}, Image {{title.first_issue.first_page.sequence}} </h3>
-            <h4 class="browse">Browse:</h4>
-        
-            <p><a href="{% url chronam_issues lccn %}" class="view_cal">Calendar View</a></p>
-            <p class="dot-top"><a href="{% url chronam_issues_first_pages title.lccn %}">All front pages</a></p>
-            {% if title.first_issue.first_page.sequence %}
-            <p class="dot-top"><a href="{% url chronam_page title.lccn,title.first_issue.date_issued,title.first_issue.edition,title.first_issue.first_page.sequence %}">First Issue</a>
-            &nbsp;|&nbsp;
+        <div class="about_issue_right row">
+            <div class="frontpage span2">
+            {% if title.first_issue.first_page.jp2_filename and title.first_issue.first_page.sequence %}
+            <a href="{% url chronam_page title.lccn,title.first_issue.date_issued,title.first_issue.edition,title.first_issue.first_page.sequence %}">
+                <img class="thumbnail" src="{% url chronam_page_thumbnail title.lccn,title.first_issue.date_issued,title.first_issue.edition,title.first_issue.first_page.sequence %}" alt="" />
+            </a>
+            {% else %}
+                Missing Page: {{explanation}}
             {% endif %}
-            {% if title.last_issue.first_page.sequence %}
-            <a href="{% url chronam_page title.lccn,title.last_issue.date_issued,title.last_issue.edition,title.last_issue.first_page.sequence %}">Last Issue</a></p>
-            {% endif %}
-          </div>
-          {% if title.first_issue.first_page.jp2_filename and title.first_issue.first_page.sequence %}
-          <a href="{% url chronam_page title.lccn,title.first_issue.date_issued,title.first_issue.edition,title.first_issue.first_page.sequence %}">
-              <img class="thumbnail" src="{% url chronam_page_thumbnail title.lccn,title.first_issue.date_issued,title.first_issue.edition,title.first_issue.first_page.sequence %}" alt="" />
-          </a>
-          {% else %}
-              Missing Page: {{explanation}}
-          {% endif %}
+            </div>
+            <div class="info span3">
+              <h3>{{title.display_name}}&nbsp;{{issue_date|date:"F j, Y"}}, Image {{title.first_issue.first_page.sequence}}</h3>
+              <h4 class="browse">Browse:</h4>
+            
+              <p><a href="{% url chronam_issues lccn %}" class="view_cal">Calendar View</a></p>
+              <p class="dot-top"><a href="{% url chronam_issues_first_pages title.lccn %}">All front pages</a></p>
+              {% if title.first_issue.first_page.sequence %}
+              <p class="dot-top"><a href="{% url chronam_page title.lccn,title.first_issue.date_issued,title.first_issue.edition,title.first_issue.first_page.sequence %}">First Issue</a>
+              &nbsp;|&nbsp;
+              {% endif %}
+              {% if title.last_issue.first_page.sequence %}
+              <a href="{% url chronam_page title.lccn,title.last_issue.date_issued,title.last_issue.edition,title.last_issue.first_page.sequence %}">Last Issue</a></p>
+              {% endif %}
+            </div>
         </div>
         {% endif %}
         {% if first_essay %}
-        <div class="about_issue_more">
+        <div class="about_issue_more row">
+            <div class="span6">
             <h4>{{first_essay.title}}</h4>
             <p>{{first_essay.html|safe}}</p>
             <p><em>Provided by: <a href="{% url chronam_awardee first_essay.creator.org_code %}">{{ first_essay.creator }}</a></em></p>
-
+            </div>
         </div><!-- end class:more -->
         {% endif %}
     </div><!-- end id:col2_right -->
-    <div class="clear"><!-- --></div>
-    <div class="txt_wrapper">
-        <p class="backtotop">
-        <a href="#skip_menu">Top</a>
-        </p>
-    </div>
+</div>
 {% endblock %}
 
