style report tables with bootstrap in core

--- a/core/templates/newspapers.html
+++ b/core/templates/newspapers.html
@@ -13,7 +13,7 @@
 <p class="gray nomargin-bottom3">These historical newspapers are available to browse and view issues in this site. {% if number_of_pages %}Pages currently available: {{number_of_pages|intcomma}}{% endif %}</p>
 
 <div class="browse_collect_body">
-    <table class="browse_collect" cellspacing="0" summary="">
+    <table class="table table-striped table-hover browse_collect" cellspacing="0" summary="">
         <tr>
             <th>State</th>
             <th>Newspaper</th>
