--- a/core/templates/reports/awardees.html
+++ b/core/templates/reports/awardees.html
@@ -10,7 +10,7 @@ detail page for the awardee, and clicking on the organization code will
 perform a search of the MARC Organization database.
 </p>
 
-<table class="data" width="100%">
+<table class="data table table-striped table-hover" width="100%">
     <tr>
         <th>Name</th>
         <th>MARC Organization Code</th>
