--- a/core/templates/reports/batch.html
+++ b/core/templates/reports/batch.html
@@ -14,7 +14,7 @@
 <h4>Summary Information</h4>
 <br />
 
-<table class="data">
+<table class="data table table-striped table-hover">
     <tr class="lightGray">
         <td>Awardee:</td>
         <td>
@@ -56,7 +56,7 @@
 <p>
 <h4>Issues in Batch</h4>
 <br />
-<table class="data">
+<table class="data table table-striped table-hover">
 <tr>
     <th>Title</th>
     <th>Issue Date</th>
@@ -76,7 +76,7 @@
 <p>
   <h4>Reels in Batch</h4>
   <br />
-  <table class="data">
+  <table class="data table table-striped table-hover">
     <tr>
       <th>Reel Number</th>
       <th>Titles in Reel</th>
