--- a/core/templates/reports/batch_summary.html
+++ b/core/templates/reports/batch_summary.html
@@ -7,7 +7,7 @@ This report is also available as a
 <a href="{% url chronam_batch_summary_txt "txt" %}">comma separated text file</a>.
 </p>
 
-<table class="data" width="100%">
+<table class="data table table-striped table-hover" width="100%">
 
     <tr>
         <th>Batch Name</th>
