--- a/core/templates/reports/batches.html
+++ b/core/templates/reports/batches.html
@@ -56,7 +56,7 @@ in the <a href="{% url chronam_batches_atom %}">Atom</a> and
 
 <br />
 
-<table class="data" width="100%">
+<table class="data table table-striped table-hover" width="100%">
 
   <tr>
     <th>Created</th>
