--- a/core/templates/reports/essays.html
+++ b/core/templates/reports/essays.html
@@ -7,7 +7,7 @@ Below is a list of essays provided by NDNP Awardees about newspapers that
 are available in Chronicling America.
 </p>
 
-<table class="data">
+<table class="data table table-striped table-hover">
     <tr>
         <th style="width: 55%;">Essay Title</th>
         <th style="width: 25%;">Creator</th>
