--- a/core/templates/reports/institution.html
+++ b/core/templates/reports/institution.html
@@ -3,7 +3,7 @@
 {% block subcontent %}
 
 <div>
-  <table class="data">
+  <table class="data table table-striped table-hover">
     <tr class="lightGray">
       <td class="label">Name</td>
       <td>{{institution.name}}</td>
