--- a/core/templates/reports/institution_titles.html
+++ b/core/templates/reports/institution_titles.html
@@ -42,7 +42,7 @@
     <div id="search_results_box">
         
 
-        <table class="data" width="100%">
+        <table class="data table table-striped table-hover" width="100%">
         {% for title in page.object_list %}
         <tr class="{% cycle 'lightGray' 'white' %}">
             <td>
