--- a/core/templates/reports/language_titles.html
+++ b/core/templates/reports/language_titles.html
@@ -34,7 +34,7 @@
 
 <br />
 
-<table class="data" width="100%">
+<table class="data table table-striped table-hover" width="100%">
 
   <tr>
     <th>Titles</th>
