--- a/core/templates/reports/languages.html
+++ b/core/templates/reports/languages.html
@@ -6,7 +6,7 @@
 Below is a list of languages found in newspaper text that are available in Chronicling America.
 </p>
 
-<table class="data">
+<table class="data table table-striped table-hover">
     <tr>
         <th style="width: 20%;">Language</th>
         <th style="width: 10%;">Code</th>
