--- a/core/templates/reports/ocr.html
+++ b/core/templates/reports/ocr.html
@@ -55,7 +55,7 @@ If you are interested in automated access to this data you may want to use the
 <p>
 </p>
 
-<table class="data">
+<table class="data table table-striped table-hover">
     <tr>
         <th>Filename</th>
         <th>Created</th>
