--- a/core/templates/reports/pages_on_flickr.html
+++ b/core/templates/reports/pages_on_flickr.html
@@ -10,7 +10,7 @@ Flickr API. The last update ran at {{ last_update }}.
 
 <br />
 
-<table class="data" width="100%">
+<table class="data table table-striped table-hover" width="100%">
 
     <tr>
     <th>Page</th>
