--- a/core/templates/reports/reel.html
+++ b/core/templates/reports/reel.html
@@ -8,7 +8,7 @@
 <h4>Summary Information</h4>
 <br />
 
-<table class="data">
+<table class="data table table-striped table-hover">
     <tr class="lightGray">
         <th>Batch</th>
         <th>Title</th>
