--- a/core/templates/reports/reports.html
+++ b/core/templates/reports/reports.html
@@ -11,7 +11,7 @@
 
 {% block subcontent %}
 
-<table class="data" width="100%">
+<table class="data table table-striped table-hover" width="100%">
     <tr class='lightGray'>
         <td><a href="{% url chronam_batches %}">Batches View</td>
     </tr>    
