--- a/core/templates/reports/status.html
+++ b/core/templates/reports/status.html
@@ -2,9 +2,8 @@
 {% load humanize %}
 
 {% block subcontent %}
-<h2>System Status</h2>
 
-<table class="data" width="100%">
+<table class="data table table-striped table-hover" width="100%">
     <tr class="lightGray">
         <td>Batches modeled</td>
         <td>{{ batch_count|intcomma }}</td>
