--- a/core/templates/reports/terms.html
+++ b/core/templates/reports/terms.html
@@ -29,7 +29,7 @@
         the <a href="http://www.loc.gov/ndnp/">National Digital Newspaper Project</a> more generally.
         </p>
 
-        <table cellspacing="0" class="border" about="[ndnp:Awardee]">
+        <table cellspacing="0" class="table table-striped table-hover" about="[ndnp:Awardee]">
             <tr>
                 <th colspan="2">Term Name: Awardee</th>
             </tr>
