--- a/core/templates/reports/cities.html
+++ b/core/templates/reports/cities.html
@@ -14,7 +14,7 @@
 <div id="search_results_box">
   <div id="search_results_content">
     <div id="search_body">
-      <table class="data" width="100%">
+      <table class="data table table-striped table-hover" width="100%">
     {% for city in cities %}
         <tr class="{% cycle 'lightGray' 'white' %}">
           <td>{{city}}</td>
