--- a/core/templates/reports/city.html
+++ b/core/templates/reports/city.html
@@ -42,7 +42,7 @@
 
 <div id="search_results_box">
   <div id="search_results_content">
-      <table class="data" width="100%">
+      <table class="data table table-striped table-hover" width="100%">
     {% for title in page.object_list %}
         <tr class="{% cycle 'lightGray' 'white' %}">
             <td>
