--- a/core/templates/reports/counties.html
+++ b/core/templates/reports/counties.html
@@ -10,7 +10,7 @@
 <div id="search_results_box">
   <div id="search_results_content">
     <div id="search_body">
-      <table class="data" width="100%">
+      <table class="data table table-striped table-hover" width="100%">
     {% for county in counties %}
         <tr class="{% cycle 'lightGray' 'white' %}">
           <td><a href="{% url chronam_cities_in_county state|pack_url, county|pack_url %}">{{county}}</a></td>
