--- a/core/templates/reports/institutions.html
+++ b/core/templates/reports/institutions.html
@@ -42,7 +42,7 @@
     <div id="search_results_box">
         
 
-        <table class="data" style="margin: 20px;">
+        <table class="data table table-striped table-hover" style="margin: 20px;">
         {% for institution in page.object_list %}
         <tr class="{% cycle 'lightGray' 'white' %}">
             <td>
