--- a/core/templates/reports/states.html
+++ b/core/templates/reports/states.html
@@ -8,7 +8,7 @@
 <div id="search_results_box">
   <div id="search_results_content">
     <div id="search_body">
-    <table class="data" width="100%">
+    <table class="data table table-striped table-hover" width="100%">
     {% for state in states %}
     <tr class="{% cycle 'lightGray' 'white' %}">
         <td>
