--- a/core/templates/reports/states_counties.html
+++ b/core/templates/reports/states_counties.html
@@ -9,7 +9,7 @@
 <div id="search_results_box">
   <div id="search_results_content">
     <div id="search_body">
-      <table class="data" width="100%">
+      <table class="data table table-striped table-hover" width="100%">
     {% for state, county, total in states_counties %}
         <tr class="{% cycle 'lightGray' 'white' %}">
           <td>{{state}}</td>
